--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
   bottom: 0;
   z-index: -1;
 }
-h1, h2 {
+h1,
+h2 {
   color: white;
   font-family: Trebuchet MS;
   font-weight: bold;
@@ -24,12 +25,17 @@ h1 {
   margin-top: 30vh;
 }
 
-h2 { font-size: 3rem; }
+h2 {
+  font-size: 3rem;
+}
 
 @media (max-width: 600px) {
-  #background-video { display: none; }
+  #background-video {
+    display: none;
+  }
   body {
-    background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+    background: url('https://cdn.shopify.com/s/files/1/0576/1446/7204/files/image_16.png')
+      no-repeat;
     background-size: cover;
   }
 }
